--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -10,6 +10,9 @@ on:
       - 'tests/**'    
 
   pull_request:
+    branches:
+      - main
+      - stable  
     types:
       - opened
       - synchronize
