ci: updates to workflows

--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -7,14 +7,14 @@ on:
     paths-ignore:
       - '!docs/**'
 
-  workflow_dispatch:    
+  workflow_dispatch:
 
 jobs:
   deploy:
     name: 📃 Deploy new version bunit.dev
     runs-on: windows-latest
     steps:
-    
+
       - name: 🛒 Checkout repository
         uses: actions/checkout@v2
         with:
@@ -26,18 +26,18 @@ jobs:
         with:
           gpg-private-key: ${{ secrets.BUNIT_BOT_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.BUNIT_BOT_GPG_KEY_PASSPHRASE }}
-      
+
       - name: ⚙️ Setup CI GIT
         run: |
           git config user.name "${{ steps.import_gpg.outputs.name }}"
           git config user.email ${{ steps.import_gpg.outputs.email }}
           git config --global user.signingkey ${{ steps.import_gpg.outputs.keyid }}
-          git config --global commit.gpgsign true   
+          git config --global commit.gpgsign true
 
       - name: ⚙️ Setup GIT versioning
         uses: dotnet/nbgv@v0.4.0
         with:
-          setAllVars: true   
+          setAllVars: true
 
       - name: 🛠️ Get Changelog Entry
         id: changelog_reader
@@ -51,7 +51,7 @@ jobs:
           RELEASE-VERSION: ${{ steps.changelog_reader.outputs.version }}
         with:
           files: '["docs/site/*.md", "docs/**/*.md", "docs/**/*.tmpl.partial", "*.csproj", "**/*.csproj"]'
-          
+
       - name: ⚙️ Setup dotnet 3.1.x
         uses: actions/setup-dotnet@v1
         with:
@@ -72,7 +72,7 @@ jobs:
         run: |
           dotnet build docs/site/
           dotnet build docs/site/
-          
+
       - name: 🛠️ Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
@@ -87,3 +87,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_PAT: ${{ secrets.BUNIT_BOT_TOKEN }}
+
+      - name: ⏩ Merge stable with main, push origin
+        run: |
+          git checkout main
+          git merge -S stable
+          git push origin main
+
+      - name: ⏭ Create pull request from stable to main when direct merge fails
+        if: ${{ failure() }}
+        uses: thomaseizinger/create-pull-request@1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          head: stable
+          base: main
+          title: Update main with documentation in stable
+          reviewers: ${{ github.actor }} # By default, we request a review from the person who triggered the workflow.
+          body: |
+            Hi @${{ github.actor }}
+
+            This PR was created because the [docs-deploy](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed to automatically merge stable into main.
