--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          token: ${{ secrets.BUNIT_BOT_TOKEN }}
 
       - name: ⚙️ Import GPG key
         id: import_gpg
@@ -98,7 +99,7 @@ jobs:
         if: ${{ failure() }}
         uses: thomaseizinger/create-pull-request@1.0.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BUNIT_BOT_TOKEN }}
         with:
           head: stable
           base: main
