--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -7,7 +7,7 @@ on:
       - stable
     paths:
       - 'src/**'
-      - 'tests/**'    
+      - 'tests/**'
 
   pull_request:
     types:
@@ -61,7 +61,10 @@ jobs:
         run: dotnet build -c release -p:ContinuousIntegrationBuild=true
 
       - name: 🧪 Run unit tests
-        run: dotnet test -c release --no-build  --logger GitHubActions
+        run: |
+          dotnet test tests/bunit.core.tests -c release --no-build --logger GitHubActions
+          dotnet test tests/bunit.web.tests -c release --no-build --logger GitHubActions
+          dotnet test tests/bunit.web.testcomponents.tests -c release --no-build --logger GitHubActions
 
       - name: 🗳️ Create library packages
         run: |
