--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -62,9 +62,9 @@ jobs:
 
       - name: 🧪 Run unit tests
         run: |
-          dotnet test tests/bunit.core.tests -c release --no-build --logger GitHubActions
-          dotnet test tests/bunit.web.tests -c release --no-build --logger GitHubActions
-          dotnet test tests/bunit.web.testcomponents.tests -c release --no-build --logger GitHubActions
+          dotnet test ./tests/bunit.core.tests/bunit.core.tests.csproj -c release --no-build --logger GitHubActions
+          dotnet test ./tests/bunit.web.tests/bunit.web.tests.csproj -c release --no-build --logger GitHubActions
+          dotnet test ./tests/bunit.web.testcomponents.tests/bunit.web.testcomponents.tests.csproj -c release --no-build --logger GitHubActions
 
       - name: 🗳️ Create library packages
         run: |
