--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -63,6 +63,11 @@ jobs:
         with:
           dotnet-version: '5.0.x'
 
+      - name: ⚙️ Setup dotnet 6.0.x
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+
       - name: 🛠️ Building bUnit
         run: dotnet build /p:PublicRelease=true
 
