--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           dotnet-version: '5.0.x'
 
+      - name: ⚙️ Setup dotnet 6.0.x
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'
+
       - name: ⚙️ Setup GIT versioning
         uses: dotnet/nbgv@v0.4.0
         with:
