--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -45,7 +45,7 @@ jobs:
       - name: ⚙️ Setup dotnet 6.0.x
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: '6.0.100-preview.3.21202.5'
 
       - name: ⚙️ Setup GIT versioning
         uses: dotnet/nbgv@v0.4.0
