--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -71,11 +71,11 @@ jobs:
           dotnet test ./tests/bunit.web.tests/bunit.web.tests.csproj -c release --logger GitHubActions
           dotnet test ./tests/bunit.web.testcomponents.tests/bunit.web.testcomponents.tests.csproj -c release --logger GitHubActions
 
-      - name: 🗳️ Create library packages
+      - name: 🗳️ Pack library
         run: |
-          dotnet pack src/bunit/ -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
-          dotnet pack -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
-          dotnet pack src/bunit.template/ -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true
+          dotnet pack src/bunit/ -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true -p:PublicRelease=true
+          dotnet pack -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true -p:PublicRelease=true
+          dotnet pack src/bunit.template/ -c release -o ${GITHUB_WORKSPACE}/packages -p:ContinuousIntegrationBuild=true -p:PublicRelease=true
 
       # Excluding windows because the restore step doesnt seem to work correct.
       - name: ✔ Verify template
