--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,13 +116,15 @@ jobs:
           prerelease: ${{ env.NBGV_PublicRelease == 'False' }}
 
       - name: ⏩ Merge stable with main, push to origin
+        id: mergeMainline
+        continue-on-error: true      
         run: |
           git checkout main
           git merge -S stable
           git push origin main
 
       - name: ⏭ Create pull request from stable to main when direct merge fails
-        if: ${{ failure() }}
+        if: steps.mergeMainline.outcome == 'failure'
         uses: thomaseizinger/create-pull-request@1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.BUNIT_BOT_TOKEN }}
