--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,7 +18,7 @@
 	<PropertyGroup Label="Compile settings">
 		<Nullable>enable</Nullable>
 		<LangVersion>9.0</LangVersion>
-		<NoWarn>CA1014</NoWarn>
+		<NoWarn>CA1014,NU5104</NoWarn>
 
 		<!-- Used by code coverage -->
 		<DebugType>full</DebugType>
