--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -44,7 +44,8 @@ jobs:
       - name: ⚙️ Setup dotnet 6.0.x
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.100-preview.3.21202.5'
+          dotnet-version: 6.0.x
+          include-prerelease: true
 
       - name: ⚙️ Setup GIT versioning
         uses: dotnet/nbgv@v0.4.0
