--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -31,7 +31,8 @@ jobs:
       - name: ⚙️ Setup dotnet 6.0.x
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.100-preview.3.21202.5'
+          dotnet-version: 6.0.x
+          include-prerelease: true
       
       - name: 🛠️ Update tokens in project files
         uses: cschleiden/replace-tokens@v1
