--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -73,7 +73,8 @@ jobs:
       - name: ⚙️ Setup dotnet 6.0.x
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.100-preview.3.21202.5'
+          dotnet-version: 6.0.x
+          include-prerelease: true
 
       - name: 🛠️ Building bUnit
         run: dotnet build /p:PublicRelease=true
