ci: added ability to push prereleases to nuget.org

--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -8,6 +8,11 @@ on:
     types: [ completed ]
 
   workflow_dispatch:
+    inputs:
+      nugetRelease:
+        description: 'Release to NuGet? Set to "true" to release to NuGet.org as well as GPR.'     
+        required: true
+        default: 'false'
 
 jobs:
   release-preview:
@@ -47,3 +52,7 @@ jobs:
         
       - name: 🛠️ Upload library to GitHub Package Repository
         run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/bunit-dev/index.json --skip-duplicate --no-symbols true
+
+      - name: 🛠️ Upload library to NuGet.org repository
+        if: github.event.inputs.nugetRelease == 'true'
+        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
