--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -84,6 +84,7 @@ jobs:
 
       - name: 🛠️ Building docs
         run: |
+          dotnet build
           dotnet build docs/site/
           dotnet build docs/site/
 
