refactor/style: changed code to align with latest code analyzer rules

--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -39,3 +39,6 @@ dotnet_diagnostic.CA2007.severity = none            # https://github.com/atc-net
 ##########################################
 # Custom - Code Analyzers Rules
 ##########################################
+
+dotnet_diagnostic.CA1819.severity = suggestion		# CA1819: Properties should not return arrays
+dotnet_diagnostic.CA1849.severity = suggestion		# CA1849: Call async methods when in an async method
