refactor: upgrade template to net 6

--- a/src/bunit.template/bunit.template.csproj
+++ b/src/bunit.template/bunit.template.csproj
@@ -33,5 +33,9 @@
 		<EmbeddedResource Remove="template\obj\**" />
 		<None Remove="template\obj\**" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <None Remove="template\CounterRazorTests.razor" />
+	</ItemGroup>
 
 </Project>
