--- a/docs/samples/tests/Directory.Build.props
+++ b/docs/samples/tests/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
-		<LangVersion>9.0</LangVersion>
+		<LangVersion>10.0</LangVersion>
     	<RazorLangVersion>3.0</RazorLangVersion>
 	</PropertyGroup>
 </Project>
